infrastructure/kubernetes/app/keycloak-manifests/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: keycloak
    namespace: auth
spec:
    parentRefs:
        - name: traefik
          namespace: default
          group: gateway.networking.k8s.io
          kind: Gateway
          sectionName: https
    hostnames:
        - keycloak.lan
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: keycloak-service
                port: 8080
                group: ""
                kind: Service
                weight: 1
